Workable server code

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -14,7 +14,11 @@
 </head>
 
 <body>
-<!-- your content here... -->
-<script src="js/scripts.js"></script>
+
+<h3>Flight Status</h3>
+<div id="status"></div>
+
+<script src="js/jquery-3.6.0.min.js"></script>
+<script src="js/FlightMonitor.js"></script>
 </body>
 </html>
