--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -11,21 +11,106 @@
     <meta property="og:title" content="Flight Monitor">
     <meta property="og:type" content="website">
 
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+
+    <style type="text/css">
+        body {
+            background-image: linear-gradient(180deg, #eee, #fff 100px, #fff);
+        }
+
+        .container {
+            max-width: 750px;
+        }
+
+        .card-body {
+            min-height: 350px;
+        }
+    </style>
+
 </head>
 
 <body>
 
-<h3>Flight Status <span style="font-size: 0.6em;" id="valUpdateTime"></span></h3>
-<div id="status">
-    <p><b>GS</b> <span id="valGS"></span> Knots / <b>TAS</b> <span id="valTAS"></span> Knots</p>
-    <p>
-        <b>Fuel</b> <span id="valFuel"></span> kg
-        / <span id="valFuelRate"></span> kg/h
-        / <span id="valFuelTime"></span>h
-    </p>
-    <p><b>Distance</b> <span id="valDistance"></span>nm (<span id="valDistPercent"></span>%)</p>
-    <p><b>ETA</b> <span id="valETA"></span> (<span id="valETE"></span>)</p>
-    <p><b>Descent Ref</b> <span id="valDesAngle"></span>°, <span id="valDesVelocity"></span> ft/min</p>
+<div class="container">
+
+    <div class="p-3 pb-md-4 mx-auto text-center">
+        <h3 class="display-5 fw-normal">Flight Status</h3>
+        <p class="fs-5"><span id="valUpdateTime">-</span></p>
+    </div>
+
+    <main>
+        <div class="row row-cols-1 row-cols-md-2 mb-3 text-center">
+            <div class="col">
+                <div class="card mb-4 rounded-3 shadow-sm">
+                    <div class="card-header py-3">
+                        <h4 class="my-0 fw-normal">Flight</h4>
+                    </div>
+                    <div class="card-body">
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%" id="pgbPercent">
+                            </div>
+                        </div>
+                        <h4 class="card-title" style="margin-top: 20px;">
+                            <span id="valCompletedDist">0.0</span> /
+                            <span id="valTotalDist">0.0</span> nm <br/>
+                            <small class="text-muted">
+                                <span id="valCompletedDistKm">0.0</span> /
+                                <span id="valTotalDistKm">0.0</span> km
+                            </small>
+                        </h4>
+                        <ul class="list-unstyled mt-3 mb-4">
+                            <li><b>Altitude</b></li>
+                            <li>
+                                <span id="valAltitude">0.0</span> ft
+                                <small class="text-muted">(<span id="valAltitudeM">0.0</span> m)</small>
+                            </li>
+                            <li><br/><b>Destination</b></li>
+                            <li>
+                                <span id="valDistance">0.0</span> nm
+                                <small class="text-muted">(<span id="valDistanceKm">0.0</span> km)</small>
+                            </li>
+                            <li><span id="valETA">01/01 00:00</span> (<span id="valETE">0m</span>)</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card mb-4 rounded-3 shadow-sm">
+                    <div class="card-header py-3">
+                        <h4 class="my-0 fw-normal">Performance</h4>
+                    </div>
+                    <div class="card-body">
+                        <h4 class="card-title">
+                            <span id="valGS">0.0</span> Knots<br/>
+                            <small class="text-muted">
+                                <span id="valGSKm">0.0</span> km/h
+                            </small>
+                        </h4>
+                        <ul class="list-unstyled mt-3 mb-4">
+                            <li>
+                                <span class="badge bg-secondary">TAS</span>
+                                <span id="valTAS">0.0</span> Knots
+                            </li>
+                            <li><br/><b>Fuel</b></li>
+                            <li>
+                                <span id="valFuel">0.0</span> kg <br/>
+                                <span id="valFuelRate">0.0</span> kg/h
+                                (<span id="valFuelTime">0.0</span>h)
+                            </li>
+                            <li><br/><b>Descent Ref</b></li>
+                            <li>
+                                <span id="valDesAngle">0.0</span>°<br/>
+                                <span id="valDesVelocity">0.0</span> ft/min
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </main>
+
 </div>
 
 <script src="js/jquery-3.6.0.min.js"></script>
