--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -11,19 +11,28 @@
     <meta property="og:title" content="Flight Monitor">
     <meta property="og:type" content="website">
 
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+
     <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <style type="text/css">
+        html {
+            height: 100%;
+        }
+
         body {
-            background-image: linear-gradient(180deg, #eee, #fff 100px, #fff);
+            height: 100%;
+            margin: 0;
+            paddng: 0;
         }
 
         .container {
-            max-width: 750px;
+            max-width: 360px;
+            /*opacity: 0.7;*/
         }
 
         .card-body {
-            min-height: 350px;
+            min-height: 200px;
         }
 
         .subscript {
@@ -42,13 +51,29 @@
             background-color: #f0f0f0;
             padding: 5px 0px;
         }
+
+        #map {
+            height: 100%;
+        }
+
+        #status {
+            position: absolute;
+            z-index: 1;
+            left: 0px;
+            top: 10px;
+        }
     </style>
+
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/moment.js"></script>
 
 </head>
 
 <body>
 
-<div class="container">
+<div id="map"></div>
+
+<div class="container" id="status">
 
     <main>
         <div class="row row-cols-1 row-cols-md-1 mb-3 text-center">
@@ -75,7 +100,7 @@
                         </p>
                         <ul class="list-unstyled mt-3 mb-4">
                             <li class="title">Destination</li>
-                            <li style="font-size: 1.6em;">
+                            <li style="font-size: 1.2em;">
                                 <b><span id="valDistance">0.0</span> <span class="subscript">nm</span></b>
                                 <span class="metric">
                                     (<span id="valDistanceKm">0.0</span> <span class="subscript">km</span>)
@@ -83,12 +108,12 @@
                             </li>
                             <li><span id="valETA">01/01 00:00</span> (<span id="valETE">0m</span>)</li>
                             <li class="title">Altitude</li>
-                            <li style="font-size: 1.6em;">
+                            <li style="font-size: 1.2em;">
                                 <b><span id="valAltitude">0.0</span> <span class="subscript">ft</span></b>
                                 <span class="metric">(<span id="valAltitudeM">0.0</span> <span class="subscript">m</span>)</span>
                             </li>
                             <li class="title">Speed</li>
-                            <li style="font-size: 1.6em;">
+                            <li style="font-size: 1.2em;">
                                 <b><span id="valGS">0.0</span> <span class="subscript">Knots</span></b>
                                 <span class="metric">
                                     (<span id="valGSKm">0.0</span> <span class="subscript">km/h</span>)
@@ -118,9 +143,9 @@
     </main>
 
 </div>
-
-<script src="js/jquery-3.6.0.min.js"></script>
-<script src="js/moment.js"></script>
-<script src="js/FlightMonitor.js"></script>
 </body>
+
+<script src="js/FlightMonitor.js"></script>
+<script type="text/javascript" src="//api.map.baidu.com/api?v=3.0&ak=<%=ak%>&callback=initMap"></script>
+
 </html>
