--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -138,7 +138,12 @@
                                 <span id="valDesVelocity">0.0</span> ft/min
                             </li>
                         </ul>
-                        Auto Center <input type="checkbox" checked data-toggle="toggle" data-size="sm" id="chkAutoCenter"/>
+                        <div style="float:left; font-size: 0.9em; width: 100px;">
+                            Auto Center<br/><input type="checkbox" checked data-toggle="toggle" data-size="sm" id="chkAutoCenter"/>
+                        </div>
+                        <div style="float:right; font-size: 0.9em; width: 100px;">
+                            Flight Plan<br/><button type="button" class="btn btn-primary btn-sm" id="btPlan">Load</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -150,6 +155,6 @@
 </body>
 
 <script src="js/FlightMonitor.js"></script>
-<script type="text/javascript" src="//api.map.baidu.com/api?v=3.0&ak=<%=ak%>&callback=initMap"></script>
+<script type="text/javascript" src="//api.map.baidu.com/api?v=3.0&ak=<%=ak%>&callback=init"></script>
 
 </html>
