--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -200,7 +200,7 @@
                             <li class="title">Weather / Visibility</li>
                             <li>
                                 <span id="valWeather"></span> /
-                                <span id="valVisibility">100</span><sup>mi</sup>
+                                <span id="valVisibility">100</span><sup>km</sup>
                             </li>
                             <li class="title">Wind</li>
                             <li>
