--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -136,7 +136,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span id="valETE">0</span><sup>min</sup>
+                                <span id="valETE">0</span>
                                 (<span id="valETA">01/01 00:00</span>)
                             </li>
                             <li class="title">Altitude</li>
