--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -227,6 +227,7 @@
 </body>
 
 <script src="js/FlightMonitor.js"></script>
+<script src="js/MapConvertor.js"></script>
 <script type="text/javascript" src="//api.map.baidu.com/api?v=3.0&ak=<%=ak%>&callback=init"></script>
 
 </html>
