Hide METAR info if failing to get it
Fix errors before simulation

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -86,6 +86,10 @@
             visibility: hidden;
         }
 
+        .noDisplay {
+            display: none;
+        }
+
         .LIFR { color: magenta; }
         .IFR { color: red; }
         .MVFR { color: blue; }
@@ -197,6 +201,8 @@
                                 <span id="valElevation">0</span><sup>ft</sup> /
                                 <span id="valRunway">36L</span>
                             </li>
+                        </ul>
+                        <ul class="list-unstyled mt-3 mb-4" id="ulMetarInfo">
                             <li class="title">Weather / Visibility</li>
                             <li>
                                 <span id="valWeather"></span> /
