Set metar div width to auto

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -60,6 +60,7 @@
         #metar {
             font-family: monospace;
             font-size: 0.9em;
+            width: auto;
             max-width: 360px;
             position: absolute;
             z-index: 1;
