Optimize route distance calculation
Restructure code

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -209,8 +209,12 @@
 
 </body>
 
-<script src="js/FlightMonitor.js"></script>
-<script src="js/MapConvertor.js"></script>
+<script src="js/Utils.js?v=1"></script>
+<script src="js/FlightMonitor.js?v=2"></script>
+<script type="text/javascript">
+    _debug = <%=debug%>;
+</script>
+<script src="js/MapConvertor.js?v=1"></script>
 <script type="text/javascript" src="//api.map.baidu.com/api?v=3.0&ak=<%=ak%>&callback=init"></script>
 
 </html>
